<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/ARtxt1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/ARtvN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/name" />

    <EditText
        android:id="@+id/ARetN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ARtvN"
        android:layout_below="@+id/ARtvN"
        android:ems="8" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/ARtvA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ARetN"
        android:layout_below="@+id/ARetN"
        android:text="@string/lastname" />

    <EditText
        android:id="@+id/ARetA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ARtvA"
        android:layout_below="@+id/ARtvA"
        android:ems="8" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ARetA"
        android:layout_below="@+id/ARetA"
        android:text="@string/age" />

    <EditText
        android:id="@+id/ARetE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:ems="3"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ARetE"
        android:layout_below="@+id/ARetE"
        android:text="@string/weight" />

    <EditText
        android:id="@+id/ARetW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:ems="4"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ARetW"
        android:layout_below="@+id/ARetW"
        android:text="@string/height" />

    <EditText
        android:id="@+id/ARetH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:ems="4"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ARetH"
        android:layout_below="@+id/ARetH"
        android:text="@string/pass" />

    <EditText
        android:id="@+id/ARetp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/ARbtS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ARetp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/sigin" />

</RelativeLayout>

</ScrollView>
